<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="default_image_description">Voting</string>
    <string name="upcoming_elections">UPCOMING ELECTIONS</string>
    <string name="find_my_representatives">FIND MY REPRESENTATIVES</string>
    <string name="header_upcoming_elections">Upcoming Elections</string>
    <string name="head_saved_elections">Saved Elections</string>
    <string name="header_representative_search">Representative Search</string>
    <string name="edit_address_line_1">Address line 1 </string>
    <string name="edit_address_line_2">Address line 2 </string>
    <string name="edit_city">City </string>
    <string name="edit_zip">Zip </string>
    <string name="find_my_representatives_btn">FIND MY REPRESENTATIVES</string>
    <string name="use_my_location_btn">USE MY LOCATION</string>
    <string name="my_representatives">My Representatives</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="correspondence_address">Correspondence Address</string>
    <string name="default_address">Address</string>
    <string name="follow_election">Follow Election</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="website">Website</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="avatar">Avatar</string>
    <string name="unfollow_btn">unfollow election</string>
    <string name="follow_btn">follow election</string>
    <string name="status_loading">Loading…</string>
    <string name="status_error">Error when retrieving representatives</string>
    <string name="error_require_location_permission">To get representatives by using location, you need to enable location permission</string>

</resources>
