<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="representative"
            type="com.example.android.politicalpreparedness.representative.model.Representative" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <ImageView
            android:id="@+id/image_avatar"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_margin="4dp"
            android:contentDescription="@string/avatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:profileImage="@{representative.official.photoUrl}" />

        <TextView
            android:id="@+id/text_office_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:text="@{representative.office.name}"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_avatar"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="President of the US" />

        <TextView
            android:id="@+id/text_official_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:text="@{representative.official.name}"
            app:layout_constraintEnd_toStartOf="@id/image_www_icon"
            app:layout_constraintStart_toEndOf="@id/image_avatar"
            app:layout_constraintTop_toBottomOf="@id/text_office_name"
            tools:text="Mike" />

        <TextView
            android:id="@+id/text_official_party"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:text="@{representative.official.party}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/image_www_icon"
            app:layout_constraintStart_toEndOf="@id/image_avatar"
            app:layout_constraintTop_toBottomOf="@id/text_official_name"
            tools:text="Party" />

        <ImageView
            android:id="@+id/image_www_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/website"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/image_facebook_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_www" />

        <ImageView
            android:id="@+id/image_facebook_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/image_twitter_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_facebook" />

        <ImageView
            android:id="@+id/image_twitter_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/twitter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_twitter" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>